README geliştirildi
Expanded README with detailed project information, features, usage instructions, and technologies used.